# qsynth2

./: .gitignore  CMakeLists.txt  README.md
plugin/: CMakeLists.txt
plugin/include/QSynthi2/: Data.h  Eigen.h  FFT.h  Juce.h  PluginEditor.h  PluginProcessor.h  Video.h  types.h
plugin/include/QSynthi2/AudioProcessing/: AJAudioProcessor.h  AudioProcessor.h  ProcessingBlock.h
plugin/include/QSynthi2/Container/: List.h  Vector.h
plugin/include/QSynthi2/Display/: SimulationDisplay.h
plugin/include/QSynthi2/List/: Vector.h  list.h
plugin/include/QSynthi2/Parameter/: ExponentialRange.h  FloatParameter.h  LambdaListener.h  Modulatable.h  ModulatedParameterFloat.h  Modulation.h  ModulationData.h  Parameter.h  ParameterAdapter.h  ParameterCollection.h  ParameterHolder.h  Parameters.h
plugin/include/QSynthi2/Simulation/: Potential.h  QuantumSimulation.h  QuantumSimulationTypes.h  SimThread.h  Simulation.h  SimulationThread.h  VideoSimulation.h
plugin/include/QSynthi2/Synthesizer/: ADSR.h  Oscillator.h  Scanner.h  Sonifier.h  Synthesiser.h  Synthesizer.h  Voice.h  VoiceData.h
plugin/include/QSynthi2/Testing/: Benchmarking.h  Stopwatch.h
plugin/src/: Data.cpp  PluginEditor.cpp  PluginProcessor.cpp
plugin/src/AudioProcessing/: AJAudioProcessor.cpp
plugin/src/Display/: SimulationDisplay.cpp
plugin/src/Parameter/: Modulatable.cpp  ModulatedParameterFloat.cpp  Modulation.cpp  ModulationData.cpp  ParameterHolder.cpp  Parameters.cpp
plugin/src/Simulation/: QuantumSimulation.cpp  SimThread.cpp  Simulation.cpp  SimulationThread.cpp  VideoSimulation.cpp
plugin/src/Synthesizer/: ADSR.cpp  Scanner.cpp  Sonifier.cpp  Voice.cpp
simsdl/: CMakeLists.txt
simsdl/src/: SDLPlot.h  main.cpp
test/: CMakeLists.txt
test/src/: AudioProcessorTest.cpp  SimulationTest.cpp
